--- a/style.css
+++ b/style.css
@@ -101,22 +101,29 @@ footer {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.container {
+    width: 1200px;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 form {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 form fieldset {
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 10px;
-    margin-bottom: 10px;
-    align-items: center;
-    text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
 form legend {
-    font-weight: bold;
-    color: #171717;
+  font-weight: bold;
+  color: #777;
 }
 
 .input-container {
